#DOCSRC := flow-capture.sgml flow-cat.sgml flow-dscan.sgml flow-expire.sgml flow-export.sgml flow-fanout.sgml flow-filter.sgml flow-gen.sgml flow-header.sgml flow-import.sgml flow-log2rrd.sgml flow-mask.sgml flow-merge.sgml flow-nfilter.sgml flow-print.sgml flow-receive.sgml flow-report.sgml flow-rpt2rrd.sgml flow-rptfmt.sgml flow-send.sgml flow-split.sgml flow-stat.sgml flow-tag.sgml flow-tools-examples.sgml flow-tools.sgml flow-xlate.sgml 

man_MANS := $(DOCSRC:.sgml=.1)
man_MANSIN := $(DOCSRC:.sgml=.1.in)

all-am: Makefile $(man_MANS)
